--- a/SyncPDFViewerInterop.Sample/Components/Pages/Home.razor
+++ b/SyncPDFViewerInterop.Sample/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using MudBlazor
 @using SyncPDFViewerInterop.Components
 @using SyncPDFViewerInterop.Interfaces
 @rendermode InteractiveServer
@@ -7,18 +8,60 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
-<button class="btn btn-primary" @onclick="HandleClick">Load</button>
+<MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="HandleClick">
+    Load
+</MudButton>
+<MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="HandleSignatureFieldClick">
+    Add Signature Field
+</MudButton>
+<MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="HandleInitialFieldClick">
+    Add Initial Box Field
+</MudButton>
+<MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="HandleTextBoxFieldClick">
+    Add Text Box Field
+</MudButton>
+<MudCheckBox T="bool" Value="checkBoxValue" Label="@DisplayNme" ValueChanged="HandleCheckBoxChanged" />
 <PDFViewer >
 
 </PDFViewer>
 
 @code
 {
+    private bool checkBoxValue = false;
+    private string DisplayNme = "Edit Mode Disabled";
     [Inject] private IPDFViewerInterop pdfViewer { get; set; }
     protected async Task HandleClick()
     {
         await pdfViewer.Configure();
         await pdfViewer.LoadPDF("https://cdn.syncfusion.com/content/pdf/pdf-succinctly.pdf");
+        StateHasChanged();
+    }
+    protected async Task HandleSignatureFieldClick()
+    {
+        await pdfViewer.AddSignatureField();
+        StateHasChanged();
+    }
+    protected async Task HandleInitialFieldClick()
+    {
+        await pdfViewer.AddInitialField();
+        StateHasChanged();
+    }
+    private async Task HandleCheckBoxChanged(bool e)
+    {
+        await pdfViewer.SetFormFieldMode(e);
+        if (e)
+        {
+            DisplayNme = "Edit Mode Enabled";
+        }
+        else
+        {
+            DisplayNme = "Edit Mode Disabled";
+        }
+        StateHasChanged();
+    }
+    protected async Task HandleTextBoxFieldClick()
+    {
+        await pdfViewer.AddTextBoxField();
         StateHasChanged();
     }
 }
